# tetriz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio.h  constants.h  graphics.h  melodies.h  state.h  tetriz.c  tetrominos.h  verblib.h
src/main/: audio.h  constants.h  graphics.h  melodies.h  state.h  tetriz.c  tetromino.h  tetrominos.h  types.h  util.h
src/test/: test_data.h  test_util.h  testriz.c
